@@ -97,4 +97,21 @@ if test -z "$ti_script"; then
   exit 1
 fi
 
-exec $awk_binary -v Invocation_name="$0" -f "$ti_script" -- "$@"
+# Suppose a symlink named a\tb (four chars) is made to this script, and
+# "a\tb" --help
+# is invoked.  We want the output to report the program name as the
+# four chars a, \, t, b, not a, tab, b.
+# 
+# But we pass the value using (g)awk -v, and (g)awk processes arguments
+# to -v for escape sequences, so that by the time the rest of the script
+# sees it, it has a tab in it.
+# 
+# Conclusion: we must double any backslashes before invoking gawk,
+# by running the command: sed 's,\\,\\\\,g'
+# 
+# Sadly, since we have to do this in a shell, we need twice
+# as many backslash characters in the input.  Hope it's portable across
+# shells and seds.
+# 
+escaped0=`echo "$0" | sed 's,\\\\,\\\\\\\\,g'`
+exec $awk_binary -v Invocation_name="$escaped0" -f "$ti_script" -- "$@"
